[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-plotter-dc"
version = "0.1.0"
description = "A small Matplotlib utility for clean graph plotting with automatic labels and tick formatting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Diederik Coppitters" }
]
dependencies = [
    "matplotlib",
    "numpy"
]

[tool.setuptools]
py-modules = ["graph_plotter"]